# stockpiler-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Toolchain-sdcc.cmake
include/pdk-utils/: delay.h
include/spl/: device_state.h  loop.h  spl.h  timings.h  utils.h
src/pdk-utils/: delay.c
src/spl/: device_state.c  loop.c  spl.c  utils.c
src/spl-bridge/: firmware.c
